--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,10 @@
 ---
-import Header from './../components/Header.astro';
-import Footer from './../components/Footer.astro';
+import "../styles/global.css";
+import Header from "./../components/Header.astro";
+import Footer from "./../components/Footer.astro";
 ---
 
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth" class="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -11,7 +12,9 @@ import Footer from './../components/Footer.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body class="font-sans">
+	<body
+		class="font-sans bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300 min-h-screen"
+	>
 		<Header />
 		<main>
 			<slot />
