--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -5,7 +5,7 @@
 <button
   id="darkModeToggle"
   aria-label="Toggle dark mode"
-  class="p-2 rounded-full bg-gray-700 text-white dark:bg-white dark:text-gray-700 hover:bg-gray-200 dark:hover:bg-gray-700 transition"
+  class="p-2 rounded-full hover:bg-gray-200 dark:hover:bg-gray-700 transition"
 >
 </button>
 
