--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="bg-gray-100 dark:bg-gray-800 py-6 mt-12">
 	<div class="container mx-auto px-4 text-center">
-		<p>© 2025 Nama Anda. All rights reserved.</p>
+		<p>© 2025 Agung. All rights reserved.</p>
 	</div>
 </footer>
